--- a/20_Boxes.html
+++ b/20_Boxes.html
@@ -9,30 +9,30 @@
 </head>
 <body>
     
-    <div>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+    <div class="box">
+        <div class="b1"></div>
+        <div class="b1"></div>
+        <div class="b1"></div>
+        <div class="b1"></div>
+        <div class="b1"></div>
+        <div class="b1"></div>
+        <div class="b1"></div>
+        <div class="b1"></div>
+        <div class="b1"></div>
+        <div class="b1"></div>
     </div>
 
-    <div class="a1">
-        <h3></h3>
-        <h3></h3>
-        <h3></h3>
-        <h3></h3>
-        <h3></h3>
-        <h3></h3>
-        <h3></h3>
-        <h3></h3>
-        <h3></h3>
-        <h3></h3>
+    <div class="box a1">
+        <div class="c3"></div>
+        <div class="c3"></div>
+        <div class="c3"></div>
+        <div class="c3"></div>
+        <div class="c3"></div>
+        <div class="c3"></div>
+        <div class="c3"></div>
+        <div class="c3"></div>
+        <div class="c3"></div>
+        <div class="c3"></div>
     </div>
 
 
